5a981ee8 caused xwayland crash when using GraphicsMagick to display and switch some tiff images
Original bug URL: https://bugzilla.opensuse.org/show_bug.cgi?id=1194190
description
In openSUSE Tumbleweed, after we bumped wayland from 1.19 to 1.20, we got some xwayland crash on GraphicsMagick test. I did some test and after I revert wayland/wayland@5a981ee8, the problem disappears. So I think there are something wrong in this commit.
how to reproduce
- I can reproduce this on openSUSE Tumbleweed VM, but not my Arch Linux physical machine. So I think first we need a Tumbleweed in VM.
- Then download the following 4 tiff files.
- Run
gm display frame*.tiff
, and press Space so GraphicsMagick will start to switch image file, typically I get xwayland crash when switching to frame3.tiff. If you cannot get crash for 4 files, maybe you can copy and rename them to frame5.tiff, frame6.tiff, etc, and then try again.
logs, screenshots, resources
Related logs:
> Dec 30 22:55:54.252578 susetest gnome-shell[19187]: WL: file descriptor expected, object (5), message create_pool(nhi)
> Dec 30 22:55:54.254944 susetest gnome-shell[19187]: WL: error in client communication (pid 19187)
> Dec 30 22:55:54.264752 susetest gnome-shell[19597]: (EE)
> Dec 30 22:55:54.264752 susetest gnome-shell[19597]: Fatal server error:
> Dec 30 22:55:54.264752 susetest gnome-shell[19597]: (EE) wl_display@1: error 1: invalid arguments for wl_shm@5.create_pool
> Dec 30 22:55:54.264752 susetest gnome-shell[19597]: (EE)
> Dec 30 22:55:54.318528 susetest gnome-shell[23167]: xterm: fatal IO error 104 (Connection reset by peer) or KillClient on X server ":0"
> Dec 30 22:55:54.319965 susetest gnome-shell[19187]: Connection to xwayland lost
> Dec 30 22:55:54.320082 susetest gnome-shell[19187]: Xwayland just died, attempting to recover
> Dec 30 22:55:54.332312 susetest gnome-shell[19187]: X Wayland crashed; attempting to recover
If full log is needed please tell me.
tiff images to reproduce: